tests/snapshots/trace_solver@16661313971626602519.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatBoth
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: ResetBindingMode
  bundle_name: stable_rust
  request: "[&x]: &&[&&T]"
---
[&x] @ s: &&[&&T]
// Applying rule `ConstructorMultiRef`
[&x] @ *s: &[&&T]
// Applying rule `ConstructorRef`
&x @ &(**s).0: &&&T
// Applying rule `Deref(EatBoth)`
x @ *(**s).0: &T
// Applying rule `Binding`
let x: &T = *(**s).0

// Final bindings (simplified):
let x: &T = *(**s).0;
